// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`playback quality submenu should be structurally sound 1`] = `
<vm-settings pin="bottomRight" style="bottom: 0px; right: 8px;">
  <!---->
  <vm-menu aria-hidden="true" aria-labelledby="" id="vime-settings-5" role="menu" tabindex="-1">
    <!---->
    <div>
      <vm-menu-item aria-hidden="false" aria-label="Playback Rate" class="notTouch" role="menuitem" tabindex="0">
        Playback Rate
        <span class="spacer"></span>
        <span class="hint">
          Normal
        </span>
      </vm-menu-item>
      <vm-submenu>
        <!---->
        <vm-menu-item aria-controls="vime-submenu-4" aria-expanded="false" aria-haspopup="true" aria-hidden="false" aria-label="Playback Quality" class="notTouch" id="vime-submenu-4-controller" role="menuitem" tabindex="0">
          Playback Quality
          <span class="spacer"></span>
          <span class="hint">
            720p
          </span>
          <span class="arrow right"></span>
        </vm-menu-item>
        <vm-menu aria-hidden="true" aria-labelledby="vime-submenu-4-controller" id="vime-submenu-4" role="menu" tabindex="-1">
          <!---->
          <div>
            <vm-menu-radio-group>
              <!---->
              <vm-menu-radio>
                <vm-menu-item aria-checked="false" aria-hidden="false" aria-label="1080p" class="notTouch" role="menuitemradio" tabindex="0">
                  <vm-icon href="#vime-checkmark"></vm-icon>
                  1080p
                  <span class="spacer"></span>
                  <span class="badge">
                    HD
                  </span>
                </vm-menu-item>
              </vm-menu-radio>
              <vm-menu-radio>
                <vm-menu-item aria-checked="true" aria-hidden="false" aria-label="720p" class="notTouch" role="menuitemradio" tabindex="0">
                  <vm-icon href="#vime-checkmark"></vm-icon>
                  720p
                </vm-menu-item>
              </vm-menu-radio>
              <vm-menu-radio>
                <vm-menu-item aria-checked="false" aria-hidden="false" aria-label="480p" class="notTouch" role="menuitemradio" tabindex="0">
                  <vm-icon href="#vime-checkmark"></vm-icon>
                  480p
                </vm-menu-item>
              </vm-menu-radio>
            </vm-menu-radio-group>
          </div>
        <//vm-menu>
      </vm-submenu>
      <vm-menu-item aria-hidden="false" aria-label="Subtitles/CC" class="notTouch" role="menuitem" tabindex="0">
        Subtitles/CC
        <span class="spacer"></span>
        <span class="hint">
          None
        </span>
      </vm-menu-item>
      DefaultSlot
    </div>
  <vm-menu>
</vm-settings>
`;

exports[`playback rate submenu should be structurally sound 1`] = `
<vm-settings pin="bottomRight" style="bottom: 0px; right: 8px;">
  <!---->
  <vm-menu aria-hidden="true" aria-labelledby="" id="vime-settings-2" role="menu" tabindex="-1">
    <!---->
    <div>
      <vm-submenu>
        <!---->
        <vm-menu-item aria-controls="vime-submenu-1" aria-expanded="false" aria-haspopup="true" aria-hidden="false" aria-label="Playback Rate" class="notTouch" id="vime-submenu-1-controller" role="menuitem" tabindex="0">
          Playback Rate
          <span class="spacer"></span>
          <span class="hint">
            Normal
          </span>
          <span class="arrow right"></span>
        </vm-menu-item>
        <vm-menu aria-hidden="true" aria-labelledby="vime-submenu-1-controller" id="vime-submenu-1" role="menu" tabindex="-1">
          <!---->
          <div>
            <vm-menu-radio-group>
              <!---->
              <vm-menu-radio>
                <vm-menu-item aria-checked="true" aria-hidden="false" aria-label="Normal" class="notTouch" role="menuitemradio" tabindex="0">
                  <vm-icon href="#vime-checkmark"></vm-icon>
                  Normal
                </vm-menu-item>
              </vm-menu-radio>
              <vm-menu-radio>
                <vm-menu-item aria-checked="false" aria-hidden="false" aria-label="2" class="notTouch" role="menuitemradio" tabindex="0">
                  <vm-icon href="#vime-checkmark"></vm-icon>
                  2
                </vm-menu-item>
              </vm-menu-radio>
              <vm-menu-radio>
                <vm-menu-item aria-checked="false" aria-hidden="false" aria-label="3" class="notTouch" role="menuitemradio" tabindex="0">
                  <vm-icon href="#vime-checkmark"></vm-icon>
                  3
                </vm-menu-item>
              </vm-menu-radio>
            </vm-menu-radio-group>
          </div>
        <///vm-menu>
      </vm-submenu>
      <vm-menu-item aria-hidden="false" aria-label="Playback Quality" class="notTouch" role="menuitem" tabindex="0">
        Playback Quality
        <span class="spacer"></span>
        <span class="hint">
          Auto
        </span>
      </vm-menu-item>
      <vm-menu-item aria-hidden="false" aria-label="Subtitles/CC" class="notTouch" role="menuitem" tabindex="0">
        Subtitles/CC
        <span class="spacer"></span>
        <span class="hint">
          None
        </span>
      </vm-menu-item>
      DefaultSlot
    </div>
  <vm-menu>
</vm-settings>
`;

exports[`should be structurally sound 1`] = `
<vm-player aria-busy="false" aria-hidden="false" aria-label="Video Player" id="vime-player-1" ready="" tabindex="0">
  <!---->
  <vm-faketube></vm-faketube>
  <vm-ui>
    <!---->
    <div>
      <vm-default-settings pin="bottomRight">
        <!---->
        <vm-settings pin="bottomRight" style="bottom: 0px; right: 8px;">
          <!---->
          <vm-menu aria-hidden="true" aria-labelledby="" id="vime-settings-1" role="menu" tabindex="-1">
            <!---->
            <div>
              <vm-menu-item aria-hidden="false" aria-label="Playback Rate" class="notTouch" role="menuitem" tabindex="0">
                Playback Rate
                <span class="spacer"></span>
                <span class="hint">
                  Normal
                </span>
              </vm-menu-item>
              <vm-menu-item aria-hidden="false" aria-label="Playback Quality" class="notTouch" role="menuitem" tabindex="0">
                Playback Quality
                <span class="spacer"></span>
                <span class="hint">
                  Auto
                </span>
              </vm-menu-item>
              <vm-menu-item aria-hidden="false" aria-label="Subtitles/CC" class="notTouch" role="menuitem" tabindex="0">
                Subtitles/CC
                <span class="spacer"></span>
                <span class="hint">
                  None
                </span>
              </vm-menu-item>
              DefaultSlot
            </div>
          <//vm-menu>
        </vm-settings>
      </vm-default-settings>
    </div>
  </vm-ui>
</vm-player>
`;
